# troy-ptservice-drf-backend

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  uwsgi.ini
.ci-cd/config/gunicorn/: gunicorn_conf.py
.ci-cd/config/nginx/: Dockerfile  nginx-troy.conf  nginx.conf  supervisord.conf
.config/nginx/: Dockerfile  nginx-troy.conf
Troy/: asgi.py  backend.py  celery.py  renderer.py  settings.py  urls.py  wsgi.py
Troy/nginx/: Dockerfile  nginx-troy.conf  nginx.conf
Troy/settings/: __init__.py  base.py  development.py  production.py
Troy/urls/: base.py  development.py
Troy/wsgi/: development.py  production.py
api/: urls.py
api/centers/: serializer.py
api/oauth/: serializer.py  services.py  urls.py  views.py
api/programs/: serializer.py  urls.py  views.py
api/quests/: serializer.py
api/schedule/: urls.py  views.py
api/tags/: serializer.py
api/users/: serializer.py  services.py  urls.py  views.py
api/verify/: urls.py  views.py
apps/centers/: apps.py  models.py
apps/centers/migrations/: 0001_initial.py  0002_center_location.py
apps/oauth/: admin.py  models.py
apps/oauth/migrations/: 0002_auto_20211013_1157.py  0003_alter_authsms_phone_number.py  (+1 more)
apps/programs/: apps.py  models.py
apps/quests/: models.py
apps/schedule/: models.py
apps/tags/: models.py
apps/users/: admin.py  models.py
centers/: models.py  serializer.py
centers/migrations/: 0001_initial.py  0002_alter_center_full_address.py
oauth/: models.py  serializer.py  services.py  urls.py  views.py
oauth/migrations/: 0001_initial.py
quests/: models.py  serializer.py
quests/migrations/: 0001_initial.py  0002_auto_20210804_1540.py  0002_initial.py  0003_auto_20210811_0419.py  0003_auto_20210913_1412.py
schedule/: models.py
schedule/migrations/: 0001_initial.py  0002_initial.py
services/: models.py  serializer.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_alter_onlineservice_service.py  0002_auto_20210913_0722.py  0002_initial.py  0003_remove_service_term.py
tags/: models.py  serializer.py
tags/migrations/: 0001_initial.py  0002_auto_20210804_2336.py  0002_initial.py  0003_alter_hashtag_tag_type.py  0004_alter_hashtag_tag_type.py
users/: admin.py  models.py  serializer.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20210804_1540.py  0002_userprofile_oauth.py  0003_alter_userprofile_profile_img.py  0003_auto_20210815_0343.py  0004_auto_20210821_1245.py  0004_trainerprofile_center.py
utils/: authentication.py  backend.py  models.py  responses.py  swagger.py
(+31 files in other folders)
