[tool.poetry]
name = "troy-backend"
version = "0.1.0"
description = "\"troy-backend project dockerized with poetry version_0.1.0\""
authors = ["soheeeeP <tpfj@naver.com>"]
license = "M-to-M"

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.4.1"
certifi = "2021.5.30"
cffi = "1.14.6"
charset-normalizer = "2.0.4"
cryptography = "3.4.7"
defusedxml = "0.7.1"
dj-rest-auth = "2.1.9"
Django = "3.2.5"
django-allauth = "0.45.0"
django-debug-toolbar = "3.2.1"
django-model-utils = "4.1.1"
djangorestframework = "3.12.4"
djangorestframework-simplejwt = "4.7.2"
idna = "3.2"
oauthlib = "3.1.1"
pycparser = "2.20"
PyJWT = "2.1.0"
python3-openid = "3.2.0"
pytz = "2021.1"
requests = "2.26.0"
requests-oauthlib = "1.3.0"
sqlparse = "0.4.1"
urllib3 = "1.26.6"
psycopg2-binary = "2.9.1"
django-storages = "1.11.1"
boto3 = "1.18.14"
uWSGI = "2.0.19.1"
environs = "9.3.3"
Pillow = "8.3.1"
attrs = "21.2.0"
botocore = "1.21.14"
coreapi = "2.3.3"
coreschema = "0.0.4"
drf-yasg = "1.20.0"
gunicorn = "20.1.0"
inflection = "0.5.1"
itypes = "1.2.0"
Jinja2 = "3.0.1"
jmespath = "0.10.0"
jsonschema = "3.2.0"
MarkupSafe = "2.0.1"
marshmallow = "3.13.0"
packaging = "21.0"
pyparsing = "2.4.7"
pyrsistent = "0.18.0"
python-dateutil = "2.8.2"
python-dotenv = "0.19.0"
PyYAML = "5.4.1"
"ruamel.yaml" = "0.17.16"
"ruamel.yaml.clib" = "0.2.6"
s3transfer = "0.5.0"
six = "1.16.0"
swagger-spec-validator = "2.7.3"
uritemplate = "3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
